--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,25 @@ version: '2'
 services:
   app:
     build: .
+    environment:
+      DATABASE_URL: mysql2://root:pass@mysql:3306
+      MYSQL_ROOT_URL: 'pass'
     command: python app.py
     ports:
       - '5000:5000'
     volumes:
       - .:/usr/src/mappin_server
+    links:
+      - mysql
+  mysql:
+    image: mysql:5.7.10
+    environment:
+      MYSQL_ROOT_PASSWORD: 'pass'
+    ports:
+      - '3306:3306'
+    volumes:
+      - mysql-data:/var/lib/mysql
+volumes:
+  mysql-data:
+    driver: local
+
