--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     ports:
       - '3306:3306'
     volumes:
-      - mysql-data:/var/lib/mysql
+      - ./db/mysql-data:/var/lib/mysql
 volumes:
   mysql-data:
     driver: local
