--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   app:
     build: .
     environment:
-      DATABASE_URL: mysql2://root:pass@mysql:3306
+      DATABASE_URL: mysql://root:pass@mysql:3306
       MYSQL_ROOT_URL: 'pass'
-    command: python app.py
+    # command: python app.py
     ports:
       - '5000:5000'
     volumes:
@@ -15,8 +15,7 @@ services:
   mysql:
     image: mysql:5.7.10
     command: bash -c 'usermod -o -u 1000 mysql; groupmod -o -g 500 mysql; chown -R mysql:root /var/run/mysqld/; /entrypoint.sh mysqld --user=mysql --console'
-    environment:
-      MYSQL_ROOT_PASSWORD: 'pass'
+    
     ports:
       - '3306:3306'
     volumes:
